Added examples to open api documentation
